[tool.pdm]
[tool.pdm.build]
includes = ["src/XX"]
package-dir = "src/XX"

[tool.pdm.dev-dependencies]
[project]
name = "nasy_pyt"
version = "0.1.0"
description = "desc"
authors = [
    {name = "Nasy", email = "nasyxx+python@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.org"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


# [[tool.pdm.source]]
# url = "https://download.pytorch.org/whl/cu118"
# verify_ssl = true
# name = "torch"

[[tool.pdm.source]]
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
name = "jaxlib"
verify_ssl = true
type = "find_links"

[tool.mypy]
mypy_path = "./__types"
exclude = [
  "__pypackages__/",
  "./__types",  # for pyright autogen stubs
]

follow_imports_for_stubs = true
follow_imports = "silent"

disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

implicit_optional = true
strict_optional = true


warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_return_any = false
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
strict = true

warn_unused_configs = true

[tool.isort]
py_version = "auto"

# profile = "black"
group_by_package = true
color_output = true
combine_straight_imports = true

import_heading_stdlib = "Standard Library"


known_db = ["sqlite", "shelve"]
import_heading_db = "Database"

known_tf = ["tensorflow", "keras"]
import_heading_tf = "Tensorflow"

known_torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
import_heading_torch = "Torch"

known_jax = ["jax", "haiku", "flax", "optax", "jraph", "chex", "jaxopt"]
import_heading_jax = "JAX"

known_types = ["typing", "types", "jax.typing", "jaxtyping", "numpy.typing", "typing_extensions"]
import_heading_types = "Types"

known_config = ["config", "settings", "cfg", "tyro"]
import_heading_config = "Config"

known_math = ["numpy", "scipy", "sklearn", "pandas", "geoopt"]
import_heading_math = "Math"

known_plot = ["matplotlib"]
import_heading_plot = "Plot"

import_heading_thirdparty = "Others"

import_heading_localfolder = "Local"
known_localfolder = ["sites", "src"]

import_heading_utils = "Utils"
known_utils = ["tqdm", "rich"]

sections = ["FUTURE", "FIRSTPARTY", "STDLIB", "TYPES", "UTILS", "DB", "MATH", "PLOT", "TF", "TORCH", "JAX", "CONFIG", "THIRDPARTY", "LOCALFOLDER"]


[tool.pyright]
pythonVersion = "3.11"
extraPaths = [
  "__pypackages__/3.9/lib",
  "__pypackages__/3.10/lib",
  "__pypackages__/3.11/lib",
  "src",
]

exclude = [
    "**/__pycache__",
]

useLibraryCodeForTypes = true


[tool.ruff]

exclude = [ "__types"]

fix = false
unfixable = ["F401", "F841", "C417"]
format = "grouped"
# show-source = true

select = [ "ALL" ]
ignore = [
  "ANN101", "C417", "COM812", "D203", "D213",
  "FBT002", "EM102", "ERA001", "EXE001", "FBT001",
  "I001", "PD", "S101", "SLF001", "TRY003", "UP009",
  "EM101",
]

# show-fixes = true

[tool.ruff.per-file-ignores]
"__init__.py" = [ "D104" ]
"__version__.py" = [ "D100" ]

[tool.ruff.pylint]
max-args = 10

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 15

[tool.pyink]
pyink_indentation = 2
preview = true
