[project]
name = "pyt"
version = "0.1.0"
description = "pyt"
authors = [
    {name = "Nasy", email = "nasyxx+python@gmail.com"},
]
dependencies = []
requires-python = ">3.12,<3.13"
readme = {content-type = "text/plain", file="readme.org"}
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[[tool.pdm.source]]
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
name = "jaxlib"
verify_ssl = true
type = "find_links"



[tool.mypy]
mypy_path = "./typings"
exclude = [
  "__pypackages__/",
  "./typings",  # for pyright autogen stubs
]

follow_imports = "silent"
follow_imports_for_stubs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

strict_equality = true
strict = true

warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.12"
extraPaths = [
  "__pypackages__/3.11/lib",
  "__pypackages__/3.12/lib",
  "src",
]

exclude = [
    "**/__pycache__",
]

useLibraryCodeForTypes = true


[tool.ruff]
cache-dir = "~/.cache/ruff"
exclude = [ "./typings" ]
indent-width = 2
line-length = 88
output-format = "grouped"
preview = true
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
preview = true


[tool.ruff.lint]
ignore = [
  "ANN101", "C417", "COM812", "D203", "D213", "D401",
  "E111", "E114", "E401", "EM101", "EM102", "ERA001", "EXE001",
  "FBT002", "FBT001",
  "I001", "PD", "S101", "SLF001", "TRY003", "UP009",
  "T201", "PGH003", "ISC001"
]
preview = true
select = ["ALL"]

unfixable = [
  "F401",  # unused imports
  "F841",  # unused variables
  "C417"   # map
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "tf", "torch", "jax", "types", "math", "database", "third-party", "config", "local-folder"]

[tool.ruff.lint.isort.sections]
database = ["lucene", "lupyne", "elasticsearch", "sqlite", "shelve"]
tf = ["tensorflow", "keras"]
torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
jax = ["jax", "haiku", "flax", "optax", "jraph", "chex", "jaxopt", "equinox", "orbax"]
types = ["typing", "types", "jax.typing", "jaxtyping", "numpy.typing", "typing_extensions"]
math = ["numpy", "scipy", "sklearn", "pandas"]
config = ["config", "settings", "cfg", "smile_config", "tyro"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "D104" ]
"__version__.py" = [ "D100" ]
"sites/*.py" = [ "INP001" ]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 15
